--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
   
     <div class="col-md-4">
-      <p>Scenester meggings gentrify lo-fi, narwhal ethical master cleanse put a bird on it mumblecore quinoa squid Neutra synth. Kogi Pinterest salvia single-origin coffee lomo typewriter.</p>
+      <p>Sce meggings gentrify lo-fi, narwhal ethical master cleanse put a bird on it mumblecore quinoa squid Neutra synth. Kogi Pinterest salvia single-origin coffee lomo typewriter.</p>
        <a href="#" class="btn btn-danger"> Please Don't Click!</a>
     </div>
     </div>
